--- a/LaboratorioMVC/LaboratorioMVC.csproj
+++ b/LaboratorioMVC/LaboratorioMVC.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../LaboratorioWebApi/LaboratorioWebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Shared\Book\" />
+  </ItemGroup>
+  
 </Project>
