--- a/LaboratorioWebApi/appsettings.json
+++ b/LaboratorioWebApi/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DefaultConnection": "C:\\Users\\Fernando_S\\RiderProjects\\Laboratorio\\LaboratorioWebApi\\Data\\Boolshelf.db",
   "AllowedHosts": "*"
 }
