FIX: Project Organization. FIX: Changed DB location to LaboratorioInfrastructure.csproj. FEATURE: DTOS, Repositories Interfaces, Services Interfaces, Repositories, Services for all Models. FEATURE: AutoMapper for Model to DTO and vice-versa. FEATURE: Controller made for Author. FEATURE: Added Mock Initial Mock Data.

--- a/LaboratorioWebApi/appsettings.Development.json
+++ b/LaboratorioWebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=..\\..\\LaboratorioInfrastructure\\Db\\bookshelf.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
