--- a/LaboratorioInfrastructure/LaboratorioInfrastructure.csproj
+++ b/LaboratorioInfrastructure/LaboratorioInfrastructure.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,15 +20,14 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <ProjectReference Include="..\LaboratorioApplication\LaboratorioApplication.csproj" />
+    <ProjectReference Include="..\LaboratorioDomain\LaboratorioDomain.csproj" />
   </ItemGroup>
-
+  
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Db\" />
   </ItemGroup>
-
+  
 </Project>
