--- a/LaboratorioDomain/LaboratorioDomain.csproj
+++ b/LaboratorioDomain/LaboratorioDomain.csproj
@@ -2,12 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\LaboratorioWebApi\LaboratorioWebApi.csproj" />
-  </ItemGroup>
-
+  
 </Project>
